@@ -1,11 +1,11 @@
 package org.trypticon.pdn.paintdotnet;
 
-import org.trypticon.pdn.nrbf.classes.NrbfClassRecord;
-
 import java.awt.*;
-import java.awt.image.Raster;
-import java.awt.image.WritableRaster;
 import java.util.Map;
+
+import org.trypticon.pdn.nrbf.classes.NrbfClassRecord;
+import org.trypticon.pdn.paintdotnet.composite.MultiplyComposite;
+import org.trypticon.pdn.paintdotnet.composite.XorComposite;
 
 /**
  * Stand-in for Paint.NET class {@code PaintDotNet.LayerBlendMode}.
@@ -38,52 +38,11 @@ public class LayerBlendMode {
             case 0: // Normal
                 return AlphaComposite.SrcOver;
 
+            case 1: // Multiply
+                return MultiplyComposite.INSTANCE;
+
             case 13: // Xor
-                return (srcColorModel, dstColorModel, hints) -> new CompositeContext() {
-                    @Override
-                    public void compose(Raster src, Raster dstIn, WritableRaster dstOut) {
-                        assert src.getWidth() == dstIn.getWidth();
-                        assert src.getHeight() == dstIn.getHeight();
-                        assert src.getWidth() == dstOut.getWidth();
-                        assert src.getHeight() == dstOut.getHeight();
-
-                        int width = src.getWidth();
-                        int height = src.getHeight();
-                        int[] srcPixels = null;
-                        int[] dstInPixels = null;
-                        for (int y = 0; y < height; y++) {
-                            srcPixels = src.getPixels(0, y, width, 1, srcPixels);
-                            dstInPixels = dstIn.getPixels(0, y, width, 1, dstInPixels);
-                            for (int x = 0; x < srcPixels.length; x += 4) {
-                                int srcR = srcPixels[x];
-                                int srcG = srcPixels[x + 1];
-                                int srcB = srcPixels[x + 2];
-                                int srcA = srcPixels[x + 3];
-                                int dstInR = dstInPixels[x];
-                                int dstInG = dstInPixels[x + 1];
-                                int dstInB = dstInPixels[x + 2];
-                                int dstInA = dstInPixels[x + 3];
-
-                                // Blend logic here
-                                int dstOutR = dstInR ^ srcR;
-                                int dstOutG = dstInG ^ srcG;
-                                int dstOutB = dstInB ^ srcB;
-                                int dstOutA = Math.min(255, srcA + dstInA - (srcA * dstInA) / 255);
-
-                                dstInPixels[x] = dstOutR;
-                                dstInPixels[x + 1] = dstOutG;
-                                dstInPixels[x + 2] = dstOutB;
-                                dstInPixels[x + 3] = dstOutA;
-                            }
-                            dstOut.setPixels(0, y, width, 1, dstInPixels);
-                        }
-                    }
-
-                    @Override
-                    public void dispose() {
-                        // Nothing to do
-                    }
-                };
+                return XorComposite.INSTANCE;
 
             default:
                 throw new UnsupportedOperationException("Unsupported blend mode: " + getValue());
