@@ -1,11 +1,12 @@
 package org.trypticon.pdn;
 
+import java.awt.image.BufferedImage;
+import java.io.File;
+import java.net.URL;
+import javax.imageio.ImageIO;
+
 import com.google.common.io.Resources;
 import org.junit.Test;
-
-import javax.imageio.ImageIO;
-import java.awt.image.BufferedImage;
-import java.net.URL;
 
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertThat;
@@ -15,6 +16,11 @@ public class BlendOpTest {
     @Test
     public void testNormal() throws Exception {
         commonTest("normal");
+    }
+
+    @Test
+    public void testMultiply() throws Exception {
+        commonTest("multiply");
     }
 
     @Test
@@ -30,13 +36,19 @@ public class BlendOpTest {
         URL pngResource = Resources.getResource("org/trypticon/pdn/blendop-" + mode + ".png");
         BufferedImage pngImage = ImageIO.read(pngResource);
 
-        assertThat(pdnImage.getWidth(), is(pngImage.getWidth()));
-        assertThat(pdnImage.getHeight(), is(pngImage.getHeight()));
+        try {
+            assertThat(pdnImage.getWidth(), is(pngImage.getWidth()));
+            assertThat(pdnImage.getHeight(), is(pngImage.getHeight()));
 
-        for (int y = 0; y < pdnImage.getHeight(); y++) {
-            for (int x = 0; x < pdnImage.getWidth(); x++) {
-                assertThat(pdnImage.getRGB(x, y), is(pngImage.getRGB(x, y)));
+            for (int y = 0; y < pdnImage.getHeight(); y++) {
+                for (int x = 0; x < pdnImage.getWidth(); x++) {
+                    assertThat("pixel at " + x + "," + y,
+                            pdnImage.getRGB(x, y), is(pngImage.getRGB(x, y)));
+                }
             }
+        } catch (AssertionError e) {
+            ImageIO.write(pdnImage, "PNG", new File("fail-" + mode + ".png"));
+            throw e;
         }
     }
 }
