@@ -1,6 +1,7 @@
 
 ?
 
+- Support for Multiply blend op
 - Support for `ClassWithMembers` and `SystemClassWithMembers` (thanks @dalgarins)
 - Bugfix: support for default blend mode when omitted (thanks @dalgarins)
 - Bugfix: get correct `BufferedImage` width and height (thanks @dalgarins)
